--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,12 @@
 unbind C-b
 set -g prefix C-a
 
+# PLUGINS
+# Please see https://github.com/tmux-plugins/tpm
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+# TMUX NAVIGATOR  ---------------------------------------------
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -23,4 +29,17 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 set -g base-index 1
 setw -g pane-base-index 1
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
 
+# TMUX RESURRECT  ---------------------------------------------
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# restoring vim sessions
+set -g @resurrect-strategy-vim 'session'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
