--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,11 @@
 unbind C-b
 set -g prefix C-a
 
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # PLUGINS
 # Please see https://github.com/tmux-plugins/tpm
 # List of plugins
