--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,15 @@ setw -g pane-base-index 1
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
+# enable vi mode
+setw -g mode-keys vi
+
+# make sure copy mode working
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 # TMUX RESURRECT  ---------------------------------------------
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
