--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -37,3 +37,5 @@ bright.magenta = '0xbc8cff'
 bright.cyan = '0x39c5cf'
 bright.white = '0xb1bac4'
 
+[bell]
+command = { program = "paplay", args = ["/usr/share/sounds/gnome/default/alerts/alarm_ring.ogg"] }
