install tokyonight theme for tmux and JBMonoNerd on alacritty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,8 +17,19 @@ bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# see https://github.com/janoamaral/tokyo-night-tmux
+set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @tokyo-night-tmux_window_id_style none
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
+
+# Icon styles
+set -g @tokyo-night-tmux_terminal_icon 
+set -g @tokyo-night-tmux_active_terminal_icon 
+
+# No extra spaces between icons
+set -g @tokyo-night-tmux_window_tidy_icons 0
+
 
 # use mouse...
 set -g mouse on
@@ -42,3 +53,5 @@ set-option -g focus-events on
 # Useful if you share your configuration betweeen systems with a varying value.
 #set -ag terminal-overrides ",$TERM:RGB"
 
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
