--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -3,6 +3,10 @@ TERM = "xterm-256color"
 
 [font]
 size = 9
+normal = { family =  "JetBrainsMono Nerd Font", style =  "Regular" }
+bold = { family =  "JetBrainsMono Nerd Font", style =  "Bold" }
+italic = { family =  "JetBrainsMono Nerd Font", style =  "Italic" }
+bold_italic = { family =  "JetBrainsMono Nerd Font", style =  "Bold Italic" }
 
 # (Github Dark) Colors for Alacritty
 
