tmux: start pane index from 1 instead of 0

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,8 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # enable vi mode
 setw -g mode-keys vi
+# start pane index from 1
+setw -g pane-base-index 1
 
 # make sure copy mode working
 bind-key -T copy-mode-vi 'v' send -X begin-selection
